--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@ body{
   border:none;
   font-weight:800;
 }
+/* ---------- NAV BUTTON STYLE ---------- */
+.nav-btn{
+  background: rgba(96,165,250,0.15);   /* light blue */
+  border: 1px solid rgba(96,165,250,0.35);
+  color: #93c5fd;                       /* soft blue text */
+  font-weight: 700;
+  transition: all 0.2s ease;
+}
+
+.nav-btn:hover{
+  background: rgba(96,165,250,0.25);
+  transform: translateY(-2px);
+}
 
 #quiz-screen{padding-bottom:170px}
 
@@ -230,8 +243,8 @@ body{
 <!-- BOTTOM BAR -->
 <div id="bottom-bar" style="display:none;">
   <div class="nav">
-    <button class="btn ghost" onclick="prevQ()">Previous</button>
-    <button class="btn ghost" onclick="nextQ()">Next</button>
+    <button class="btn ghost nav-btn" onclick="prevQ()">⬅️ Previous</button>
+    <button class="btn ghost nav-btn" onclick="nextQ()">Next ➡️</button>
   </div>
   <button id="submitBtn" onclick="submitQuiz()">Submit</button>
   <div class="credit">
