--- a/index.html
+++ b/index.html
@@ -383,10 +383,12 @@ a:3,
 e:"English: $(0,1)$ has lower bound $0$ and upper bound $1$, so it is bounded both ways.<br>हिन्दी: $(0,1)$ के लिए 0 निम्न सीमा और 1 उच्च सीमा हैं, अतः दोनों ओर से आबद्ध है।"},
 
 {q:"According to Cauchy’s definition, a function $f(x)$ has limit $L$ at $x=a$ if? / कॉशी की परिभाषा के अनुसार $f(x)$ की सीमा $L$ बिंदु $x=a$ पर कब होती है?",
-o:["For every $\varepsilon>0$, $\exists\delta>0$ such that $|x-a|<\delta\Rightarrow |f(x)-L|<\varepsilon$ / प्रत्येक $\varepsilon>0$ के लिए कोई $\delta>0$ हो ताकि $|x-a|<\delta$ से $|f(x)-L|<\varepsilon$","$L$ is maximum of $f$ / $L$, $f$ का अधिकतम मान है","None / इनमें से कोई नहीं","$f(a)=L$ always / सदैव $f(a)=L$"],
-a:0,
-e:"English: The $\varepsilon$–$\delta$ condition is the precise definition of limit at $a$.<br>हिन्दी: सीमा की सटीक परिभाषा $\varepsilon$–$\delta$ शर्त है।"},
-
+ o:["For every $\\varepsilon>0$, $\\exists\\,\\delta>0$ such that $|x-a|<\\delta\\Rightarrow |f(x)-L|<\\varepsilon$ / प्रत्येक $\\varepsilon>0$ के लिए कोई $\\delta>0$ हो ताकि $|x-a|<\\delta$ से $|f(x)-L|<\\varepsilon$",
+    "$L$ is maximum of $f$ / $L$, $f$ का अधिकतम मान है",
+    "None / इनमें से कोई नहीं",
+    "$f(a)=L$ always / सदैव $f(a)=L$"],
+ a:0,
+ e:"English: The $\\varepsilon$–$\\delta$ condition is the precise definition of limit at $a$.<br>हिन्दी: सीमा की सटीक परिभाषा $\\varepsilon$–$\\delta$ शर्त है।"},
 {q:"A function is continuous at $x=a$ if? / किसी फलन को $x=a$ पर सतत कब कहा जाता है?",
 o:["$f(a)=0$ / $f(a)=0$","$\lim_{x\to a} f(x)$ exists and equals $f(a)$ / $\lim_{x\to a} f(x)$ अस्तित्व में हो और $f(a)$ के बराबर हो","$f(a)$ is not defined / $f(a)$ परिभाषित नहीं है","$f(x)$ bounded near $a$ / $a$ के पास $f(x)$ आबद्ध है"],
 a:1,
@@ -398,9 +400,12 @@ a:3,
 e:"English: The polynomial $x^2$ is differentiable for all real $x$; $|x|$ and $\max(x,0)$ fail differentiability at $0$.<br>हिन्दी: $x^2$ सभी वास्तविक $x$ पर अवकलनीय है; $|x|$ और $\max(x,0)$ $x=0$ पर अवकलनीय नहीं हैं।"},
 
 {q:"Uniform continuity of $f$ on $[a,b]$ means? / $[a,b]$ पर $f$ का समान सतत होना क्या दर्शाता है?",
-o:["$f$ must be constant / $f$ स्थिर होना चाहिए","$\delta$ depends only on $\varepsilon$ / $\delta$ केवल $\varepsilon$ पर निर्भर करता है","$\delta$ depends on both $\varepsilon$ and the point / $\delta$ $\varepsilon$ और बिंदु दोनों पर निर्भर करता है","$f$ must be bounded / $f$ आबद्ध होना चाहिए"],
-a:1,
-e:"English: Uniform continuity means given $\varepsilon>0$ there exists $\delta>0$ that works for all points (depends only on $\varepsilon$).<br>हिन्दी: समान सततता में $\delta$ केवल $\varepsilon$ पर निर्भर करता है, किसी बिंदु पर नहीं।"},
+ o:["$f$ must be constant / $f$ स्थिर होना चाहिए",
+    "$\\delta$ depends only on $\\varepsilon$ / $\\delta$ केवल $\\varepsilon$ पर निर्भर करता है",
+    "$\\delta$ depends on both $\\varepsilon$ and the point / $\\delta$ $\\varepsilon$ और बिंदु दोनों पर निर्भर करता है",
+    "$f$ must be bounded / $f$ आबद्ध होना चाहिए"],
+ a:1,
+ e:"English: Uniform continuity means given $\\varepsilon>0$ there exists $\\delta>0$ that works for all points (depends only on $\\varepsilon$).<br>हिन्दी: समान सततता में $\\delta$ केवल $\\varepsilon$ पर निर्भर करता है, किसी बिंदु पर नहीं।"},
   
 {q:"The Boundedness theorem states? / आबद्धता प्रमेय क्या कहता है?",
  o:["A bounded function is always continuous / एक आबद्ध फलन सदैव सतत होता है","A continuous function on $[a,b]$ is bounded / $[a,b]$ पर सतत फलन आबद्ध होता है","Discontinuous functions are unbounded / असतत फलन अनाबद्ध होते हैं","None / इनमें से कोई नहीं"],
