--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ o:["Empty set / रिक्त समुच्चय","All real numbers greater
 a:3,
 e:"English: A neighborhood of $x$ is any set that contains some open interval around $x$.<br>हिन्दी: $x$ का पड़ोस वह समुच्चय है जिसमें $x$ के चारों ओर कोई खुला अंतराल शामिल हो।"},
 
-{q:"A set S ⊆ ℝ is bounded above if? / किसी समुच्चय $S\subseteq\mathbb{R}$ को ऊपर से आबद्ध कब कहा जाता है?",
+{q:"A set S ⊆ ℝ is bounded above if? / किसी समुच्चय S ⊆ ℝ को ऊपर से आबद्ध कब कहा जाता है?",
 o:["None of these / इनमें से कोई नहीं","S contains only positive numbers / $S$ में केवल धनात्मक संख्याएँ हैं","Every element of $S$ is less than or equal to some number $M$ / $S$ का प्रत्येक तत्त्व किसी संख्या $M$ से कम या बराबर हो","S has infinitely many elements / $S$ में अनंत तत्त्व हैं"],
 a:2,
 e:"English: $S$ is bounded above if there exists $M\in\mathbb{R}$ with $s\le M$ for all $s\in S$.<br>हिन्दी: यदि कोई वास्तविक संख्या $M$ हो जिससे $S$ का हर तत्त्व $M$ से कम या बराबर हो, तो $S$ ऊपर से आबद्ध है।"},
